# hackytools

./: .gitignore  AUTHORS.rst  Authors.rst  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst  requirements.txt
examples/: readthis.txt
hackytools/: __init__.py  ansishit.py  api.py  bork.py  cli.py  decorators.py  gifit.py  iterators.py  netutils.py  network_monitor.py  readkey.py  sliceit.py  spriteit.py  sysutils.py  testwork.py  timer.py  timing.py  utilities.py  utils.py
src/hackytools/: __init__.py  readkey.py  timing.py  utils.py
tests/: test_timing.py  test_utils.py
