[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackytools"
dependencies = ["numpy"]
dynamic = ["version"]
authors = [
  { name="Hackysack", email="tk13xr37@gmail.com" },
]
description = "Various tools and utilities that are hacky in nature. And convenient, hopefully."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "hackytools.__version__"}

[project.urls]
"Homepage" = "https://github.com/h4cky54ck/hackytools"
"Bug Tracker" = "https://github.com/h4cky54ck/hackytools/issues"

